k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncwatt-backend-svc
  namespace: syncwatt-prod
spec:
  selector:
    app: syncwatt-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
